...
import { router } from 'expo-router';
import React, { useCallback, useState } from 'react';
import { FlatList, RefreshControl, StyleSheet, View } from 'react-native';

const ITEMS_PER_PAGE = 10;

const Products = () => {
	const { theme } = useTheme();
	const [skip, setSkip] = useState(0);

	const {
		data = { products: [], total: 0, skip: 0, limit: 0 },
		isLoading,
...
			</View>
		);
	}

	return (
		<FlatList
			testID="products-list"
			data={allProducts}
			renderItem={renderItem}
			keyExtractor={item => item.id.toString()}
			contentContainerStyle={styles.container}
			numColumns={2}
			showsVerticalScrollIndicator={false}
...
